--- a/layout/partial/head.jade
+++ b/layout/partial/head.jade
@@ -9,7 +9,11 @@ block description
 
 meta(name="viewport", content="width=device-width, initial-scale=1")
 link(rel="icon", href=url_for(theme.favicon))
+link(rel="stylesheet", href="http://yun.duiba.com.cn/developer/css/download.min.css")
+link(rel="stylesheet", href="http://yun.duiba.com.cn/developer/css/59aea694.about.min.css")
+link(rel="stylesheet", href="http://yun.duiba.com.cn/developer/css/2f984bd1.home-common.min.css")
 link(rel="stylesheet", href=url_for("css/apollo.css"))
+
 
 - var xml = config.url + '/atom.xml'
     link(rel="search", type="application/opensearchdescription+xml", href=xml, title=config.title)
