--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -1,6 +1,10 @@
 //- LaTex
 script(async src="//cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML" integrity="sha384-crwIf/BuaWM9rM65iM+dWFldgQ1Un8jWZMuh3puxb8TOY9+linwLoI7ZHZT+aekW" crossorigin="anonymous")
 
+//- duiba nav underline
+script(style="text/javascript",src="http://yun.duiba.com.cn/js/jquery-1.6.4.min.js")
+script(style="text/javascript",src="http://yun.duiba.com.cn/ds/js/hexoAboutDuiba.js")
+
 //- Analytics tracking
 - var ga = theme.ga
 if ga
