--- a/layout/post.jade
+++ b/layout/post.jade
@@ -16,5 +16,5 @@ block pagination
     +post()
     include partial/comment
 
-block copyright
-    include partial/copyright
+block duibafooter
+    include partial/duibafooter
