--- a/layout/index.jade
+++ b/layout/index.jade
@@ -8,5 +8,5 @@ block pagination
     include mixins/paginator
     +home()
 
-block copyright
-    include partial/copyright
+block duibafooter
+    include partial/duibafooter
