--- a/layout/partial/layout.jade
+++ b/layout/partial/layout.jade
@@ -2,15 +2,13 @@ doctype
 html(lang=config.language)
     head
         include head
-    body
+    body(style={background:'#f5f8fb'})
+        include duibanav
         .wrap
-            header
-                a.logo-link(href=url_for())
-                    img(src=url_for(theme.logo) alt="logo")
-                include nav
+            include duibatab
             main.container
                 block container
             footer
                 block pagination
-                block copyright
+        block duibafooter
         include scripts
